// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image component renders correctly 1`] = `
<styled.img
  height="auto"
  name="logo"
  selectable={false}
  width="auto"
/>
`;

exports[`Image component renders correctly width width 1`] = `
<styled.img
  height="auto"
  name="logo"
  selectable={false}
  width="200px"
/>
`;

exports[`Image component renders correctly with height 1`] = `
<styled.img
  height="50px"
  name="logo"
  selectable={false}
  width="auto"
/>
`;

exports[`Image component renders correctly with name 1`] = `
<styled.img
  height="auto"
  name="brand"
  selectable={false}
  width="auto"
/>
`;

exports[`Image component renders correctly with selectable 1`] = `
<styled.img
  height="auto"
  name="logo"
  selectable={true}
  width="auto"
/>
`;
